--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,374 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-  /* сохраните в разметке и стилях класс page. На его основе работает скрипт. */
+	background-image: var(
+		--background-image,
+		url('../images/cover-image-dark.png')
+	);
+	font-family: var(--font-family, 'IBM Plex mono', monospace);
+	font-size: var(--font-size, 18px);
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-attachment: fixed;
+	color: var(--text-color, #f1b2ce);
+}
+
+.header {
+	display: grid;
+	grid-template-rows: 1fr min-content 1fr;
+	position: relative;
+	block-size: 100vh;
+	padding: clamp(10px, 0.0286rem + 2.5445vw, 20px);
+}
+
+.recording {
+	position: absolute;
+	inset-block-start: 22px;
+	inset-inline-end: 47px;
+	color: var(--sub-color, #ff0070);
+	font-size: 18px;
+	display: flex;
+}
+
+.recording::before {
+	content: 'REC';
+	color: var(--decorated-color, #ff0070);
+}
+
+.recording::after {
+	content: '';
+	position: absolute;
+	display: block;
+	inline-size: 9px;
+	block-size: 9px;
+	inset-inline-start: 40px;
+	inset-block-start: 6px;
+	border-radius: 50%;
+	background-color: var(--decorated-color, #ff0070);
+	box-shadow: 0 0 4px 6px var(--decorated-color-40, #ff007040);
+}
+
+.decorated-zone::after,
+.decorated-zone::before {
+	content: '';
+	position: absolute;
+	display: block;
+	inline-size: 25px;
+	block-size: 25px;
+}
+
+.decorated-zone::before {
+	inset-block-start: 20px;
+	inset-inline-end: 20px;
+	border-inline-end: 1px solid var(--decorated-color, #ff0070);
+	border-block-start: 1px solid var(--decorated-color, #ff0070);
+}
+
+.decorated-zone::after {
+	inset-block-end: 20px;
+	inset-inline-start: 20px;
+	border-inline-start: 1px solid var(--decorated-color, #ff0070);
+	border-block-end: 1px solid var(--decorated-color, #ff0070);
+}
+
+.header__theme-menu {
+	justify-self: center;
+}
+
+.header__theme-menu-list {
+	display: flex;
+	gap: 10px;
+	color: var(--decorated-color, #353430);
+}
+
+.header__theme-menu-button {
+	text-transform: lowercase;
+	border: 1px solid transparent;
+	padding: 0 13px;
+	background-color: inherit;
+	outline: none;
+}
+
+.header__theme-menu-button:hover {
+	border-color: var(--decorated-color-40, #ff007040);
+	cursor: pointer;
+}
+
+.header__theme-menu-button_active {
+	border-color: currentColor;
+	pointer-events: none;
+	cursor: default;
+}
+
+.header__theme-menu-button:focus {
+	outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+	border-block-end: 1px solid var(--accent-color, #ff0070);
+}
+
+.header__title {
+	justify-self: start;
+	align-self: center;
+	margin-inline-start: -20px;
+	color: var(--title-color, #db00ff);
+	text-shadow: 4px 4px 0 var(--accent-pink, #ff0070);
+}
+
+.common__title {
+	font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+}
+
+.header__text {
+	color: var(--header-text-color, #000028);
+	background-color: var(--accent-color, #ff0070);
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 23.4px;
+	inline-size: 50%;
+	align-self: center;
+	justify-self: end;
+	margin-block-end: 34px;
+}
+
+/* MAIN */
+
+.main {
+	display: grid;
+	row-gap: 80px;
+	padding-inline-start: 20px;
+	padding-inline-end: 20px;
+	padding-block-start: 60px;
+	padding-block-end: 60px;
+}
+
+.section {
+	display: grid;
+	grid-template-columns: 1fr 2fr;
+	column-gap: 10px;
+	row-gap: 21px;
+}
+
+.section__title {
+	color: var(--section-title-color, #ff0070);
+	font-size: 18px;
+	font-weight: bold;
+	max-inline-size: 315px;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+}
+
+.article__title {
+	margin-block-end: 10px;
+	font-size: 18px;
+}
+
+.article__text {
+	font-size: 18px;
+	line-height: 23.45px;
+}
+
+.shadow-link {
+	cursor: pointer;
+	text-decoration: none;
+	text-shadow: 4px 4px 0 var(--accent-pink, #db00ff);
+}
+
+.shadow-link:hover {
+	text-decoration: underline;
+}
+
+.shadow-link:focus {
+	outline: none;
+}
+
+.title-decor {
+	background-color: var(--accent-color, #ff0070);
+	color: var(--article-title-color, #000028);
+}
+
+.concentration {
+	display: flex;
+	flex-direction: column;
+}
+
+.concentration-list {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	column-gap: 20px;
+}
+
+.title-accent {
+	font-weight: 700;
+	margin-block-end: 0;
+}
+
+.pictures {
+	display: flex;
+	flex-direction: column;
+	row-gap: 20px;
+}
+
+.pictures-list {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	column-gap: 20px;
+	row-gap: 16px;
+}
+
+.pictures-list__item {
+}
+
+.pictures-list__img {
+	object-fit: cover;
+	object-position: center;
+
+	inline-size: 100%;
+	block-size: 100%;
+}
+
+.sunset__picture {
+	grid-column: 1 / 3;
+	grid-row: 1 / 2;
+	/* block-size: clamp(142px, 192px, 260px); */
+}
+
+.ice-cream__picture {
+	grid-column: 3 /4;
+	grid-row: 1 / 3;
+}
+
+.tape__picture {
+	grid-column: 1 / 2;
+	grid-row: 2 / 4;
+}
+
+.books__picture {
+	grid-column: 2 / 3;
+	grid-row: 2 / 3;
+}
+
+.street__picture {
+	grid-column: 2 / 4;
+	grid-row: 3 / 4;
+}
+
+.footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	position: relative;
+	inline-size: 100%;
+	block-size: 100vh;
+}
+
+.footer__title {
+	justify-self: start;
+	align-self: center;
+	color: var(--title-color, #db00ff);
+	text-shadow: 2px 2px 0 var(--accent-pink, #ff0070);
+}
+
+@media (max-width: 768px) {
+	.header__theme-menu {
+		justify-self: end;
+		margin-block-start: 173px;
+	}
+
+	.header__theme-menu-list {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.header__title {
+		font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+	}
+
+	.section__title {
+		max-inline-size: 236px;
+	}
+
+	.concentration-list {
+		grid-template-columns: none;
+	}
+
+	.section {
+		column-gap: 20px;
+	}
+}
+
+@media (max-width: 587px) {
+	.header__theme-menu {
+		margin-block-start: 0;
+		align-self: center;
+	}
+	.recording {
+		inset-block-start: 11px;
+		inset-inline-end: 40px;
+	}
+	.recording::after {
+		inset-inline-start: 43px;
+		inset-block-start: 7px;
+	}
+
+	.decorated-zone::before {
+		inset-block-start: 10px;
+		inset-inline-end: 10px;
+	}
+
+	.decorated-zone::after {
+		inset-block-end: 10px;
+		inset-inline-start: 10px;
+	}
+
+	.header__title {
+		line-height: 82.5%;
+		margin-inline-start: 0;
+	}
+
+	.header__text {
+		margin-block-end: 0;
+	}
+
+	.header__text {
+		inline-size: 100%;
+	}
+
+	.section {
+		grid-template-columns: none;
+	}
+
+	.pictures-list {
+		display: flex;
+		flex-direction: column;
+		row-gap: 4px;
+	}
+
+	.pictures-list__img {
+		block-size: auto;
+	}
+}
+
+@media (max-width: 375px) {
+	.section__title {
+		max-inline-size: 100%;
+	}
+
+	.main {
+		padding-inline-start: 10px;
+		padding-inline-end: 10px;
+		padding-block-start: 40px;
+		padding-block-end: 40px;
+		row-gap: 50px;
+	}
+
+	.pictures {
+		row-gap: 10px;
+	}
 }
