--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,6 +8,7 @@
 
 	--color-dark-blue: #000028;
 	--color-grey: #353430;
+	--color-grey-40: #35343040;
 
 	--background-image: url('../images/cover-image-dark.png');
 	--font-family: 'IBM Plex mono', monospace;
