--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,5 +1,6 @@
 .page.theme_dark {
 	--background-image: url('../images/cover-image-dark.png');
+	--background-color: url(--color-dark-blue, #000028);
 	--title-color: var(--color-pink-second, #db00ff);
 	--header-text-color: var(--color-dark-blue, #000028);
 	--decorated-color: var(--color-pink-first, #ff0070);
@@ -13,6 +14,7 @@
 @media (prefers-color-scheme: dark) {
 	:root {
 		--background-image: url('../images/cover-image-dark.png');
+		--background-color: url(--color-dark-blue, #000028);
 		--title-color: var(--color-pink-second, #db00ff);
 		--header-text-color: var(--color-dark-blue, #000028);
 		--decorated-color: var(--color-pink-first, #ff0070);
