--- a/styles/light.css
+++ b/styles/light.css
@@ -1,6 +1,6 @@
 .page.theme_light {
 	--background-image: url('../images/cover-image-light.png');
-	--background-color: var(--color-pink-sixth, #ffc2e6);
+	--background-color: var(--color-pink-seventh, #fff1f7);
 	--title-color: var(--color-pink-sixth, #ffc2e6);
 	--header-text-color: var(--color-grey, #353430);
 	--decorated-color: var(--color-grey, #353430);
@@ -9,6 +9,8 @@
 	--article-title-color: var(--color-grey, #353430);
 	--accent-color: var(--color-pink-fifth, #ff8dcb);
 	--text-color: var(--color-grey, #f1b2ce);
+	--hover-color: var(--color-pink-fourth, #353430);
+	--focus-color: var(--color-pink-fourth, #353430);
 }
 
 .page.theme_light .recording {
