--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,11 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-	background-image: var(
+	/* background-image: var(
 		--background-image,
 		url('../images/cover-image-dark.png')
-	);
+	); */
+	background-color: var(--background-color, #000028);
 	font-family: var(--font-family, 'IBM Plex mono', monospace);
 	font-size: var(--font-size, 18px);
 	background-position: center;
@@ -106,7 +107,7 @@
 }
 
 .header__theme-menu-button:focus-visible {
-	border-block-end: 1px solid var(--accent-color, #ff0070);
+	border-block-end: 1px solid var(--decorated-color, #ff0070);
 }
 
 .header__title {
@@ -177,7 +178,8 @@
 .shadow-link {
 	cursor: pointer;
 	text-decoration: none;
-	text-shadow: 4px 4px 0 var(--accent-pink, #db00ff);
+	color: var(--text-color, #f1b2ce);
+	text-shadow: 2px 2px 0 var(--accent-color, #ff0070);
 }
 
 .shadow-link:hover {
@@ -186,6 +188,12 @@
 
 .shadow-link:focus {
 	outline: none;
+}
+
+.shadow-link:focus-visible {
+	outline: 1px solid var(--text-color, #ff0070);
+	text-decoration: none;
+	outline-offset: -1px;
 }
 
 .title-decor {
@@ -233,7 +241,6 @@
 .sunset__picture {
 	grid-column: 1 / 3;
 	grid-row: 1 / 2;
-	/* block-size: clamp(142px, 192px, 260px); */
 }
 
 .ice-cream__picture {
@@ -331,9 +338,6 @@
 
 	.header__text {
 		margin-block-end: 0;
-	}
-
-	.header__text {
 		inline-size: 100%;
 	}
 
