Hot fix background-image property

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,10 @@
 /* Основные стили проекта. Это стили для темы, которую вы верстаете первой. */
 
 .page {
-	/* background-image: var(
+	background-image: var(
 		--background-image,
 		url('../images/cover-image-dark.png')
-	); */
+	);
 	background-color: var(--background-color, #000028);
 	font-family: var(--font-family, 'IBM Plex mono', monospace);
 	font-size: var(--font-size, 18px);
@@ -133,8 +133,6 @@
 	justify-self: end;
 	margin-block-end: 34px;
 }
-
-/* MAIN */
 
 .main {
 	display: grid;
