--- a/styles/variables.css
+++ b/styles/variables.css
@@ -5,6 +5,7 @@
 	--color-pink-fourth: #f1b2ce;
 	--color-pink-fifth: #ff8dcb;
 	--color-pink-sixth: #ffc2e6;
+	--color-pink-seventh: #fff1f7;
 
 	--color-dark-blue: #000028;
 	--color-grey: #353430;
