--- a/styles/style.css
+++ b/styles/style.css
@@ -209,6 +209,12 @@
 	color: var(--article-title-color, #000028);
 }
 
+.advices__article {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
 .concentration {
 	display: flex;
 	flex-direction: column;
@@ -234,8 +240,7 @@
 .pictures-list {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	column-gap: 20px;
-	row-gap: 16px;
+	gap: 20px;
 }
 
 .pictures-list__img {
@@ -251,7 +256,7 @@
 }
 
 .ice-cream__picture {
-	grid-column: 3 /4;
+	grid-column: 3 / 4;
 	grid-row: 1 / 3;
 }
 
@@ -380,7 +385,7 @@
 	.pictures-list {
 		display: flex;
 		flex-direction: column;
-		row-gap: 4px;
+		row-gap: 10px;
 	}
 
 	.pictures-list__img {
