--- a/styles/style.css
+++ b/styles/style.css
@@ -134,8 +134,6 @@
 }
 
 .main {
-	display: grid;
-	row-gap: 80px;
 	padding-inline-start: 20px;
 	padding-inline-end: 20px;
 	padding-block-start: 60px;
@@ -147,6 +145,7 @@
 	grid-template-columns: 1fr 2fr;
 	column-gap: 10px;
 	row-gap: 21px;
+	margin-block-end: 80px;
 }
 
 .section__title {
@@ -235,6 +234,7 @@
 	display: flex;
 	flex-direction: column;
 	row-gap: 20px;
+	margin: 0;
 }
 
 .pictures-collage {
@@ -372,6 +372,11 @@
 
 	.section {
 		grid-template-columns: none;
+		margin-block-end: 50px;
+	}
+
+	.pictures {
+		margin-block-end: 0;
 	}
 
 	.section__title {
@@ -386,9 +391,5 @@
 		display: flex;
 		flex-direction: column;
 		row-gap: 10px;
-	}
-
-	.pictures-collage__item {
-		block-size: auto;
 	}
 }
